infrastructure/configs/network-policies/backup/policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-rest-server-ingress
spec:
  podSelector:
    matchLabels:
      app: restic-rest-server
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: immich
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nextcloud
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: authentik
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: minio
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: backup
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: matrix
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: pankha
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: jellyfin
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: adguard
      ports:
        - port: 8000
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-exporter-egress-rest-server
spec:
  podSelector:
    matchLabels:
      app: restic-exporter
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: restic-rest-server
      ports:
        - port: 8000
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-exporter-ingress-prometheus
spec:
  podSelector:
    matchLabels:
      app: restic-exporter
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - port: 8001
          protocol: TCP
